--- a/src/sass/components/_registration.scss
+++ b/src/sass/components/_registration.scss
@@ -113,9 +113,11 @@
   padding-left: 28px;
   margin-left: auto;
   margin-right: auto;
-  color: #ffffff;
+  color: #ff6b09;
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus {
     outline: none;
+    border-color: #ff6b09;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1343px) {
@@ -148,6 +150,13 @@
   height: 48px;
   background: #ff6b09;
   margin-left: 10px;
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background: #ffffff;
+    color: #ff6b09;
+  }
+
   @media screen and (min-width: 768px) and (max-width: 1343px) {
     margin-left: auto;
     margin-right: auto;
