исправила стили. добавила медиа для декстопа

--- a/src/sass/_problems.scss
+++ b/src/sass/_problems.scss
@@ -1,10 +1,38 @@
+.section.problems-section {
+   background-color: var(--b-dark);
+}
+ 
+ .problems-icon {
+        display: none;
+    }
+ @media screen and (min-width: 1200px) {
+    .section.problems-section {
+        position: relative;
+        max-width: 1680px;
+        background-color: var(--b-dark);
+    }
+  }
+    
+    .problems-icon {
+    @media screen and (min-width: 1200px) {
+        display: block;
+    }
+    }
+    @media screen and (min-width: 1200px) {
+    .problems-icon {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        z-index: 0;
+        fill: var(--txt-dark-grey);
+    }
+ 
+}
 .problems-container {
-    background-color: var(--b-dark);
-    margin: 0 auto;
-    padding-left: 20px;
     @media screen and (min-width: 320px) and (max-width: 767px) {
         height: 545px;
         padding-top: 50px;
+        padding-left: 20px;
     }
   
     @media screen and (min-width: 768px) {
@@ -16,9 +44,10 @@
     @media screen and (min-width: 1200px) {
         height: 560px;
         padding-top: 100px;
-        padding-left: 183px;
+        // padding-left: 183px;
     }
 }
+
 .problems-title {
     font-style: normal;
     color: var(--txt-light);
@@ -52,18 +81,11 @@
         @include font(800, 46px, 1.3, 0.03em);
     }
 }
-.problems-icon {
-    display: none;
 
-@media screen and (min-width: 1200px) {
-    display: block;
-}
-}
 
 .problems-block-white {
     background-color: var(--txt-light);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-  
     // margin:  0 auto;
     @media screen and (min-width: 320px) and (max-width: 767px) {
         width: 280px;
@@ -80,6 +102,18 @@
         padding-bottom: 26px;
     }
     @media screen and (min-width: 1200px) {
+        position: absolute;
+        z-index: 99;
+        // left: 183px;
+        width: 1130px;
+        padding-left: 35px;
+        padding-right: 35px;
+        // padding-left: 114px;
+        // padding-right: 112px;
+        padding-top: 70px;
+        padding-bottom: 62px;
+    }
+    @media screen and (min-width: 1386px) {
         position: absolute;
         z-index: 99;
         // left: 183px;
@@ -160,20 +194,7 @@
 
 @media screen and (min-width: 1200px) {
     .problems-text {
-    width: 336px;
+    width: 320px;
     @include font(700, 20px, 1.2, 0.08em);
 }
-.problems-container {
-    position: relative;
-    max-width: 1680px;
 }
-.problems-icon {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: 0;
-    fill: var(--txt-dark-grey);
-}
-
-}
-
