--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,10 +1,10 @@
-<section class="section"> 
-    <div class="problems-container">
+<section class="section problems-section"> 
+    <div class="container problems-container">
         <h2 class="problems-title">Главные проблемы учеников <br>
             на English ВНО, которые <br>
             мы <span class="problems-word-color">помогаем</span> решить
         </h2>
-        <svg class="problems-icon" width="407" height="472">
+        <svg class="problems-icon" width="445" height="620">
             <use href="./images/sprite.svg#icon-fire-grey"></use>
           </svg>
         <div class="problems-block-white">
