--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,29 +1,41 @@
-<footer class="container">
-    <h2>homemade ice cream made</h2>
-    <h3>with passion</h3>
+<footer>
+    <div class="container footer">
+    <div class="footer-caption">
+    <h2 class="footer-title">homemade ice cream made</h2>
+    <h3 class="footer-subtitle">with passion</h3>
+    </div>
+    <div>
     <ul class="footer-networks">
         <li class="footer-item">
             <a href="" class="footer-link">
-                <svg class="footer-icon">
+                <svg class="footer-github">
                    <use href="./images/icons/IceCreamIcons.svg#icon-github"></use>
                 </svg>
             </a>
         </li>
         <li class="footer-item">
             <a href="" class="footer-link">
-                <svg class="footer-icon">
+                <svg class="footer-telegram">
                    <use href="./images/icons/IceCreamIcons.svg#icon-telegram"></use>
                 </svg>
             </a>
         </li>
-        <li class="networks-item">
-            <a href="" class="networks-link">
-                <svg class="networks-icon">
+        <li class="footers-item">
+            <a href="" class="footer-link">
+                <svg class="footer-facebook">
                     <use href="./images/icons/IceCreamIcons.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
     </ul>
-    <p>Feel free to contact<a href="tel:+610383766284">+61 (0) 383 766 284</a></p>
-    <p>&#169 2019 - IceCream. All Rights Reserved.</p>
+    <p class="footer-contact">Feel free to contact 
+        <a href="tel:+610383766284" class="footer-tel">+61 (0) 383 766 284</a>
+    </p>
+    </div>
+</div>
+<div class="copyright">
+    <p class="text-copyright">&#169 2019 - IceCream. All Rights Reserved.</p>
+</div>
 </footer>
+
+
