--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -11,6 +11,7 @@
   padding: 14px 1px;
   cursor: pointer;
   border: none;
+  transition: all var(--transition-function);
 
   @media screen and (min-width: 1344px) {
     font-size: 14px;
@@ -19,4 +20,8 @@
     height: 70px;
     padding: 27px 25px;
   }
+}
+
+.button:hover.animate {
+  transform: scale(1.1);
 }
