добавляет стили всех точек перелома

--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -2,9 +2,15 @@
   <div class="container">
     <h2 class="teacher-main-title">Преподаватель</h2>
 
-    
-    <div>
-      <img class="teacher-picture" src="images/teacher-mobile-tablet.jpg" alt="фото учителя" width="243" height="305.58">
+    <div class="teacher-picture">
+      <picture class="picture">
+        <source
+            srcset="/images/teacher-desc.jpg 1x, /images/teacher-desc@2x.jpg 2x"
+            media="(min-width: 1200px)">
+        <source
+            srcset="/images/teacher-mobile-tablet.jpg 1x, /images/teacher-mobile-tablet@2x.jpg 1x"
+            media="(min-width: 768px)">
+      <img class="teacher-foto" src="/images/teacher-mobile-tablet.jpg" alt="фото учителя" />
     </div>
 
     <h2 class="teacher-title">Елена Морева</h2>
