--- a/src/sass/_teacher.scss
+++ b/src/sass/_teacher.scss
@@ -1,8 +1,28 @@
 .teacher-main-title {
-    @include font(800, 20px, 1.3, 0.03em);
     color: var(--txt-dark);
     margin-bottom: 20px;
     padding: 5px 0;
+}
+
+@media screen and (min-width: 767px) {
+    .teacher-main-title {
+      @include font (800, 26px, 1.3, 0.03em)
+    }
+}
+  
+@media screen and (min-width: 1200px) {
+    .teacher-main-title {
+      @include font (800, 46px, 1.3, 0.03em)
+    }
+}
+
+@media screen and (min-width: 768px) {
+  .picture {
+    display: flex;
+  }
+  .teacher-title {
+      padding-left: 40px;
+  }
 }
 
 .teacher-picture {
@@ -10,10 +30,21 @@
 }
 
 .teacher-title {
-    @include font(800, 20px, 1.2, 0.08em);
     color: var(--txt-dark);
     margin-bottom: 10px;
     padding: 5px 0;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .teacher-title {
+      @include font(800, 20px, 1.2, 0.08em);
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .teacher-title {
+      @include font(800, 30px, 1.233, 0.08em);
+    }
 }
 
 .check-box {
@@ -31,8 +62,19 @@
 }
 
 .teacher-subtitle {
-    @include font(600, 14px, 1.214, 0.06em);
     color: var(--txt-dark);
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .teacher-subtitle {
+      @include font(600, 14px, 1.214, 0.06em);
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .teacher-subtitle {
+      @include font(600, 16px, 1.25, 0.06em);
+    }
 }
 
 .teacher-undertitle {
@@ -43,13 +85,25 @@
 }
 
 .teacher-text {
-    @include font(500, 12px, 1.167, 00.06em);
     color: var(--txt-grey);
     margin-bottom: 10px;
 }
 
 .teacher-link {
-    @include font(500, 12px, 1.167, 00.06em);
     color: var(--txt-orange);
     text-decoration-line: underline;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .teacher-text,
+    .teacher-link {
+      @include font(500, 12px, 1.167, 0.06em);
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .teacher-text,
+    .teacher-link {
+      @include font(500, 18px, 1.156, 0.06em);
+    }
 }
