header not ready
не могу обратно вставить в поток блок

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
                 data-menu-button>
                 <svg width="20" height="12">
                     <use class="header-icon-menu" href="./images/sprite.svg#icon-campfire_logo"></use>
-                    <use class="header-icon-close" href="./images/sprite.svg#icon-campfire_logo"></use>
+                    <use class="header-icon-close" href="./images/sprite.svg#icon-crossed_close"></use>
                 </svg>
             </button>
 
