--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -84,8 +84,6 @@
   }
 
   &-menu-button {
-    align-items: right;
-
     padding: 0px;
     width: 20px;
     height: 12px;
@@ -216,6 +214,48 @@
 
     &-button.is-hidden {
       display: block;
+    }
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .header {
+    padding-top: 34px;
+
+    &-logo {
+      margin-right: 144px;
+    }
+
+    &-menu-button {
+      display: none;
+    }
+
+    &-button {
+      display: block;
+    }
+
+    &-button.is-hidden {
+      display: none;
+    }
+
+    &-menu-conatainer {
+      position: static;
+      display: block;
+
+      width: 100%;
+      height: 70px;
+      padding: 0;
+
+      background-color: tomato;
+    }
+
+    &-navigation-page {
+      font-weight: bold;
+      font-style: normal;
+      font-size: 14px;
+      line-height: 1.214;
+      letter-spacing: 0.03em;
+      color: $secondary-text-color;
     }
   }
 }
