--- a/src/sass/layout/_general-problem.scss
+++ b/src/sass/layout/_general-problem.scss
@@ -1,6 +1,6 @@
 .general-problem {
-  background-color: $black; //TODO
   @extend .container;
+  position: relative;
   padding-top: 50px;
   & > h2 {
     width: 280px;
@@ -32,8 +32,16 @@
     }
   }
   &-background {
-    display: none; //TODO
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 545px;
     background-color: $black;
+    & > svg {
+      display: none;
+    }
   }
   @media screen and (min-width: $width-tablet) {
     padding-top: 60px;
@@ -64,6 +72,9 @@
           @include font(bold, 14px, 1.714, left, 0.08em);
         }
       }
+    }
+    &-background {
+      height: 340px;
     }
   }
 
@@ -96,6 +107,18 @@
           @include font(bold, 20px, 1.2, left, 0.08em);
           margin-top: 10px;
         }
+      }
+    }
+    &-background {
+      height: 560px;
+      & > svg {
+        display: block;
+        fill: #3d3d3d;
+        width: 455px;
+        height: 472px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
       }
     }
   }
