Таблэтка готова, кнопка работает

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,7 +7,10 @@
             
             <p class="hero-subtitle">Просто не будет.</p>
                 <p class="hero-gift">Но ты гарантировано наберешь <span class="hero-points">+25 баллов</span></p>
-                <button class="btn-orange" type="button">хочу на бесплатное занятие</button>
+                <a href="#registration">
+                    <button class="button" type="button">хочу на бесплатное занятие</button>
+                </a>
+                
         </div>
         
         <div class="hero-img">
