--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 //utils
 @import './utils/visually-hidden';
 @import './utils/variables';
+@import './utils/mixins';
 //base
 @import './base/common';
 @import './base/container';
