создала разметку для футера и несколько временных стилей

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,50 @@
 <h2></h2>
+
+<footer class="footer">
+    <div class="container">
+        <ul class="footer-list-button">
+            <li class="button-item">
+                <button type="button" class="footer-button transition">Our Locations</button>
+            </li>
+            <li class="button-item">
+                <button type="button" class="footer-button transition">Franchise</button>
+            </li>
+        </ul>
+        <div>
+            <p>HOMEMADE ICE CREAM MADE</p>
+            <h2>WITH PASSION</h2>
+        </div>
+        <ul class="social-list">
+            <li class="social-item">
+                <a class="social-link transition" href="">
+                    <svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-cat"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-item">
+                <a class="social-link transition" href="">
+                    <svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-item">
+                <a class="social-link transition" href="">
+                    <svg class="social-icon">
+                        <use href="./images/symbol-defs.svg#icon-fb"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+        <div class="footer-contact">
+            <p><strong></strong>Feel free to contact</strong></p>
+            <a href="tel:+610383766284" class="footer-contact-link transition">
+                <p class="footer-contact-name">+61 (0) 383 766 284</p>
+            </a>
+        </div>
+        <div class="copyright">
+            <p class="copyright-text">© 2019 - IceCream. <br> All Rights Reserved.</p>
+        </div>
+    </div>
+</footer>
