--- a/src/sass/_teacher.scss
+++ b/src/sass/_teacher.scss
@@ -52,7 +52,19 @@
     flex-wrap: wrap;
 }
 
-.list::before {
+.teacher-list {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.teacher-list_list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.teacher-list::before  {
     position: absolute;
     content: "";
     width: 280px;
@@ -60,6 +72,10 @@
     border: 1px solid var(--txt-grey);
     margin-bottom: 20px;
 }
+
+// .teacher-list-item {
+//     margin-bottom: 20px;
+// }
 
 .teacher-subtitle {
     color: var(--txt-dark);
