--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,7 +1,7 @@
 .request {
   &-form {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    //background-image: url(../images/1.png);
+    background-image: url(../images/footer-mobile.png);
     background-repeat: no-repeat;
     background-size: 320px 507px;
     background-position: center;
@@ -82,6 +82,10 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    & .container {
+      display: flex;
+      flex-direction: column;
+    }
   }
   &-black {
     height: 70px;
@@ -118,9 +122,21 @@
     flex-direction: column;
   }
 }
+.logo {
+  width: 84px;
+  height: 30px;
+  &-footer {
+    margin: 30px auto 20px auto;
+  }
+}
 @media screen and (min-width: 768px) {
   .request {
     &-form {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      background-image: url(../images/footer-tablet.png);
+      background-repeat: no-repeat;
+      background-size: 768px 552px;
+      background-position: center;
       padding: 50px 40px 70px 40px;
       width: 768px;
       min-height: 520px;
