--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -11,6 +11,8 @@ header {
     background: rgba(17, 21, 24, 0.9);
     position: absolute;
     width: 100%;
+    height: 568px;
+    z-index: 10;
     top: 0;
     left: 0;
 
@@ -41,7 +43,7 @@ header {
       letter-spacing: 0.03em;
       color: #ffffff;
       .nav-list-item {
-        margin-top: 15px;
+        margin-top: 8px;
         .nav-link {
           color: var(--white-text-color);
         }
@@ -103,8 +105,10 @@ header {
     background: rgba(17, 21, 24, 0.9);
     position: absolute;
     width: 100%;
+    height: 1024px;
     top: 0;
     left: 0;
+    z-index: 10;
 
     .menu-logo {
       display: none;
