--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -8,7 +8,6 @@
     letter-spacing: 0.03em;
     margin-bottom: 30px;
   }
-
   .garants .feature-list__container {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -136,20 +135,25 @@
 // ==================================================================================================
 @media screen and (min-width: 768px) {
   .garant__title {
-    // font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 130%;
+    text-align: center;
+    letter-spacing: 0.03em;
     margin-bottom: 30px;
   }
 
   .garants .feature-list__container {
     // padding-right: 40px;
     padding-left: auto;
+    background-color: var(--grey-bcg-color);
+    width: 100%;
   }
   .feature-list {
     display: inline-block;
-    outline: 1px solid red;
+    // outline: 1px solid red;
+    // width: 100%;
     // padding-right: 50px;
     // margin: 0;
   }
@@ -157,8 +161,13 @@
     margin-bottom: 23px;
   }
   .feature-list__item {
-    // padding-right: 50px;
-    // padding-left: auto;
+    text-align: justify;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 20px;
+    padding-right: 50px;
+    padding-left: 79px;
     background-repeat: no-repeat;
     background-image: url('../images/campfire.svg');
   }
@@ -168,7 +177,7 @@
   }
   .feature-list__description {
     display: inline-block;
-    margin-left: 20px;
+    // margin-left: 20px;
   }
 
   // =========2 секция
