--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -1,8 +1,8 @@
-.section {
-  background-color: teal;
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
+// .section {
+//   background-color: teal;
+//   padding-top: 200px;
+//   padding-bottom: 200px;
+// }
 .features {
   height: 547px;
   position: relative;
@@ -48,6 +48,10 @@
 }
 
 @media screen and (min-width: 768px) {
+  .features {
+    position: absolute;
+    top: 3638px;
+  }
   .features-title {
     @include font(800, 26px, 1.3);
     margin-bottom: 30px;
@@ -85,7 +89,7 @@
   }
   .features-list {
     padding: 70px 84px;
-    top: 62%;
+    top: 4200px;
 
     max-width: 1314px;
     height: 398px;
