--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -36,4 +36,28 @@
     </ul>
 
 </div>
+<div class="container features">
+    <h1 class="features-title">Почему нас
+        выбирают</h1>
+    <ul class="features-list list">
+        <li class="features-item">
+            <p class="features-description">Обучение в малых командах</p>
+        </li>
+        <li class="features-item">
+            <p class="features-description">Визуализированные конспекты</p>
+        </li>
+        <li class="features-item">
+            <p class="features-description">Каждое занятие имеет цель и конкретный результат</p>
+        </li>
+        <li class="features-item">
+            <p class="features-description">Реальные результаты преподавателя</p>
+        </li>
+        <li class="features-item">
+            <p class="features-description">Прогамма курса соответствует требованиям МОН Украины</p>
+        </li>
+        <li class="features-item">
+            <p class="features-description">Набор команд по уровням знаний</p>
+        </li>
+    </ul>
+</div>
 </section>
