Исправляет отступы контейнета

--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="benefits">
         <h2>tradition and love</h2>
         <h3>how it’s made?</h3>
@@ -41,4 +41,4 @@
 
     </div>
 
-</div>
+</div> -->
