--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -1,5 +1,4 @@
-
-.benefits {
+/*.benefits {
 
     & h2 {
         margin: auto;
@@ -19,4 +18,4 @@
     @media screen and (max-width: 767px) {
         background-image: url(../../images/splashing_milk.jpg);
       }
-}
+}*/
