--- a/src/sass/utils/_problems.scss
+++ b/src/sass/utils/_problems.scss
@@ -1,16 +1,24 @@
 
 .problems-text{
-width: 280px;
-font-family:--primary-font;
+// font-family:
+// font-style: normal;
+// font-weight: 800;
+// font-size: 20px;
+// line-height: 136%;
+// letter-spacing: 0.03em;
+// color:white;
+// }
+font-family: Montserrat;
 font-style: normal;
 font-weight: 800;
 font-size: 20px;
 line-height: 136%;
 letter-spacing: 0.03em;
-color:white;
+color: #FFFFFF;
 }
 .problems{
-position: absolute;
+height: 545px;
+position:relative;
 padding-top: 50px;
 background-color: black;
 }
@@ -18,9 +26,12 @@ background-color: black;
 color:#FF6B09;
 }
 .section-problems{
-margin-top: 27px;
-position: relative;
+padding-top: 30px;  
+position: absolute;
 padding-top: 30px;
+bottom: -150px;
+left: -50px;
+transform:translate(-50%);
 background: #FFFFFF;
 box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
@@ -34,9 +45,7 @@ letter-spacing: 0.08em;
 color: #111518;
 position: relative;
 }
-.problem-list{
-    counter-reset: counter;
-}
+
 .problem-list-item .accent-line::before{
     content: "";
     display: block;
@@ -48,13 +57,14 @@ position: relative;
 }
 
 .problem-list-item .accent-line::after{
-    content: counter(section, decimal-leading-zero);
+    content: counter(section,decimal-leading-zero);
     counter-increment: section;
     position: absolute;
     display: block;
     top: -11px;
-    color: #FF6B09;
+    color: #ff6b09;
     width: 20px;
+    -webkit-transform: translateX(130%);
     transform: translateX(130%);
 }
 
