--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -133,7 +133,7 @@
 }
 // =============================================================================================
 // ==================================================================================================
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1343px) {
   .garant__title {
     font-style: normal;
     font-weight: 800;
@@ -145,17 +145,11 @@
   }
 
   .garants .feature-list__container {
-    // padding-right: 40px;
-    padding-left: auto;
     background-color: var(--grey-bcg-color);
-    width: 100%;
   }
   .feature-list {
+    outline: 1px solid teal;
     display: inline-block;
-    // outline: 1px solid red;
-    // width: 100%;
-    // padding-right: 50px;
-    // margin: 0;
   }
   .feature-list__item:not(:last-child) {
     margin-bottom: 23px;
