--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -145,7 +145,7 @@
   }
 
   .feature-list {
-    display: inline-block;
+    display: block;
     background-color: var(--grey-bcg-color);
   }
   .feature-list__item:not(:last-child) {
