--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-
+@import './utils/normalize';
 // Стили для файла с примером HTML-фрагмента
 @import './layout/header';
 @import './layout/hero';
