--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,32 +1,34 @@
-<section class="section container">
-  <h2 class="visually-hidden">Преимущества</h2>
-  <ul class="advantages-list">
-    <li class="advantages-item">
-      <svg class="advantages-icon" width="59" height="60">
-        <use href="./images/sprite.svg#icon-advantages-1"></use>
-      </svg>
-      <svg class="advantages-icon-desk" width="100" height="102">
-        <use href="./images/sprite.svg#icon-advantages-desk-1"></use>
-      </svg>
-      <p class="advantages-text">Адаптированная авторская программа ВНО</p>
-    </li>
-    <li class="advantages-item">
-      <svg class="advantages-icon" width="59" height="60">
-        <use href="./images/sprite.svg#icon-advantages-2"></use>
-      </svg>
-      <svg class="advantages-icon-desk" width="100" height="102">
-        <use href="./images/sprite.svg#icon-advantages-desk-2"></use>
-      </svg>
-      <p class="advantages-text">Современные методики обучения</p>
-    </li>
-    <li class="advantages-item">
-      <svg class="advantages-icon" width="59" height="60">
-        <use href="./images/sprite.svg#icon-advantages-3"></use>
-      </svg>
-      <svg class="advantages-icon-desk" width="100" height="102">
-        <use href="./images/sprite.svg#icon-advantages-desk-3"></use>
-      </svg>
-      <p class="advantages-text">Финансовая гарантия результата</p>
-    </li>
-  </ul>
+<section class="section">
+  <div class="container advantages-container">
+    <h2 class="visually-hidden">Преимущества</h2>
+    <ul class="advantages-list">
+      <li class="advantages-item">
+        <svg class="advantages-icon" width="59" height="60">
+          <use href="./images/sprite.svg#icon-advantages-1"></use>
+        </svg>
+        <svg class="advantages-icon-desk" width="100" height="102">
+          <use href="./images/sprite.svg#icon-advantages-desk-1"></use>
+        </svg>
+        <p class="advantages-text">Адаптированная авторская программа ВНО</p>
+      </li>
+      <li class="advantages-item">
+        <svg class="advantages-icon" width="59" height="60">
+          <use href="./images/sprite.svg#icon-advantages-2"></use>
+        </svg>
+        <svg class="advantages-icon-desk" width="100" height="102">
+          <use href="./images/sprite.svg#icon-advantages-desk-2"></use>
+        </svg>
+        <p class="advantages-text">Современные методики обучения</p>
+      </li>
+      <li class="advantages-item">
+        <svg class="advantages-icon" width="59" height="60">
+          <use href="./images/sprite.svg#icon-advantages-3"></use>
+        </svg>
+        <svg class="advantages-icon-desk" width="100" height="102">
+          <use href="./images/sprite.svg#icon-advantages-desk-3"></use>
+        </svg>
+        <p class="advantages-text">Финансовая гарантия результата</p>
+      </li>
+    </ul>
+  </div>
  </section>
