--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -18,7 +18,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .section.container {
+  .advantages-container {
     padding-left: 52px;
     padding-right: 52px;
   }
