--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,11 +1,11 @@
                     <!-- section "LOCATION" -->
 <section class="location">
-    <div id="contact" class="container">
+    <div id="contact" class="container location-container">
         <ul class="location-contacts">
             <li class="location-cards">
-                <h3 class="location-institution">CAFE</h3>                 
+                <h3 class="location-institution-cafe">CAFE</h3>                 
                 <h4 class="location-town">Chicago</h4>
-                <p class="location-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                <p class="location-description">You can taste the most delicious ice cream here</p>
                 <ul class="location-shedule">
                     <li class="location-shedule-item">
                         <p class="location-shedule-days">Monday - Friday</p>
@@ -24,7 +24,7 @@
                 </address>                
             </li>
             <li class="location-cards">
-                <h3 class="location-institution">FOOD TRUCK</h3>                 
+                <h3 class="location-institution-truck">food truck</h3>                 
                 <h4 class="location-town">Los Angeles</h4>
                 <p class="location-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 <ul class="location-shedule">
@@ -45,7 +45,7 @@
                 </address>                
             </li>
             <li class="location-cards">
-                <h3 class="location-institution">CAFE</h3>                 
+                <h3 class="location-institution-cafe">CAFE</h3>                 
                 <h4 class="location-town">New York</h4>
                 <p class="location-description">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 <ul class="location-shedule">
