--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,29 +1,38 @@
 <section class="hero">
-<div class="hero-main-info">
-    <h1 class="hero-title">ice cream made with passion</h1>
-    <ul class="hero-buttons-list">
-        <li><a href="">Products</a></li>
-        <li><a href="">How it’s made?</a></li>
-    </ul>
-    <!-- доделать srcset-->
-    <img class="hero-img" 
-    src="./images/hero/ice-crem-mobile.jpg"
-    srcset=""
-    alt="ice-crem image">
-</div>
-<div class="hero-product-info">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-    <button class="hero-arrow-button"
-    type="button">
-        <svg aria-label="slider info button">
-            <use class="hero-icon-arrow" href="./images/hero/arrow-right.svg"></use>
-        </svg>
-    </button>
-</div>
-<div class="hero-service-counting">
-    <ul class="hero-counting-list">
-        <li><span class="hero-number">16</span>cafes</li>
-        <li><span class="hero-number">23</span>food trucks</li>
-    </ul>
-</div>
+    <div class="hero-container">
+        <div class="hero-main-info">
+          <h1 class="hero-title">ice cream<br>made with<br><span class="hero-passion">passion</span></h1>
+          <ul class="hero-buttons-list">
+              <li><a class="hero-button" href="">Products</a></li>
+              <li><a class="hero-button" href="">How it’s made?</a></li>
+          </ul>
+          <img class="hero-img" 
+          srcset="
+           ./images/hero/ice-cream-mobile.png  171w,
+           ./images/hero/ice-cream-mobile@2x.png  342w,
+           ./images/hero/ice-cream-tablet.png  143w,
+           ./images/hero/ice-cream-tablet@2x.png  286w,
+           ./images/hero/ice-cream-desktop.png  236w,
+           ./images/hero/ice-cream-desktop@2x.png 472w  
+          "
+          src="./images/hero/ice-cream-mobile.png"
+          alt="ice-cream"
+          sizes="(min-with: 768px) 20vw, 40vw">
+        </div>
+        <div class="hero-product-info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            <button class="hero-arrow-button" type="button" aria-label="slider info button">
+                <!-- исправить качество свг -->
+                <svg class="hero-icon-arrow">
+                    <use href="./images/icons/symbol-defs.svg#arrow""></use>
+                </svg>
+            </button>
+        </div>
+        <div class="hero-service-counting">
+            <ul class="hero-counting-list">
+                <li><span class="hero-number">16</span>cafes</li>
+                <li><span class="hero-number">23</span>food trucks</li>
+            </ul>
+        </div>  
+    </div>
 </section>
