--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -20,4 +20,4 @@ $gold-color: #f0d1a5;
 $pistachio-color: #c2e297;
 
 $tradition-background-color: #fff5f6;
-$menu-background-color: #E17992;
+$menu-background-color: #e17992;
