--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,16 +1,16 @@
 <section class="problems-section">
 <div class="problems-img-cont">
     <picture>
-        <source srcset="/images/fire/fire-min.webp 1x, /images/fire/fire@2x-min.webp 2x" type="image/webp" >
-        <img class="problems-img" src="/images/fire/fire-min.png" alt="fire"
-        srcset="/images/fire/fire@2x-min.png 2x">
+        <source srcset="/images/fire/fire-min.webp 1x, /images/fire/fire@2x-min.webp 2x" type="image/webp">
+        <img class="problems-img" src="/images/fire/fire-min.png" alt="fire" srcset="/images/fire/fire@2x-min.png 2x">
     </picture>
 </div>
 <div class="container problems">
+   
     <h1 class="problems-title">Главные проблемы учеников 
         на English ВНО, которые мы 
          <span class="problems-word">помогаем</span>  решить</h1>
-        
+   
     <ul class="problems-list list">
         <li class="problems-item">
             <p class="problems-description">Название грамматики</p>
@@ -35,29 +35,30 @@
         </li>
     </ul>
 
+    <div class="features">
+        <h1 class="features-title">Почему нас
+            выбирают</h1>
+        <ul class="features-list list">
+            <li class="features-item">
+                <p class="features-description">Обучение в малых командах</p>
+            </li>
+            <li class="features-item">
+                <p class="features-description">Визуализированные конспекты</p>
+            </li>
+            <li class="features-item">
+                <p class="features-description">Каждое занятие имеет цель и конкретный результат</p>
+            </li>
+            <li class="features-item">
+                <p class="features-description">Реальные результаты преподавателя</p>
+            </li>
+            <li class="features-item">
+                <p class="features-description">Прогамма курса соответствует требованиям МОН Украины</p>
+            </li>
+            <li class="features-item">
+                <p class="features-description">Набор команд по уровням знаний</p>
+            </li>
+        </ul>
+    </div>
 </div>
-<div class="container features">
-    <h1 class="features-title">Почему нас
-        выбирают</h1>
-    <ul class="features-list list">
-        <li class="features-item">
-            <p class="features-description">Обучение в малых командах</p>
-        </li>
-        <li class="features-item">
-            <p class="features-description">Визуализированные конспекты</p>
-        </li>
-        <li class="features-item">
-            <p class="features-description">Каждое занятие имеет цель и конкретный результат</p>
-        </li>
-        <li class="features-item">
-            <p class="features-description">Реальные результаты преподавателя</p>
-        </li>
-        <li class="features-item">
-            <p class="features-description">Прогамма курса соответствует требованиям МОН Украины</p>
-        </li>
-        <li class="features-item">
-            <p class="features-description">Набор команд по уровням знаний</p>
-        </li>
-    </ul>
-</div>
+
 </section>
