--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -1,6 +1,8 @@
 .features {
   height: 547px;
-  position: relative;
+  position: absolute;
+  z-index: 3;
+  top: 4121px;
 }
 .features-title {
   @media screen and (max-width: 767px) {
@@ -12,8 +14,6 @@
   margin-bottom: 30px;
 }
 .features-list {
-  z-index: 3;
-  position: absolute;
   margin: auto;
   max-width: 280px;
   display: block;
@@ -44,7 +44,7 @@
 @media screen and (min-width: 768px) {
   .features {
     position: absolute;
-    top: 3638px;
+    top: 2860px;
   }
   .features-title {
     @include font(800, 26px, 1.3);
@@ -78,12 +78,14 @@
   }
 }
 @media screen and (min-width: 1344px) {
+  .features {
+    top: 2960px;
+  }
   .features-title {
     display: none;
   }
   .features-list {
     padding: 70px 84px;
-    top: 4200px;
 
     max-width: 1314px;
     height: 398px;
