tablet desktop styles

--- a/src/partials/we_do_it.html
+++ b/src/partials/we_do_it.html
@@ -7,8 +7,8 @@
     <ul class="doit-list">
         <li class="doit-item list">
             <div class="doit-svg">
-                <svg class="doit-svg-item">
-                    <!-- <use href="./src/sprite.svg#icon-we_do_it-habbit"></use> -->
+                <svg class="doit-svg-item" width=45px height=48px>
+                    <use href="../sprite.svg#icon-wedoit-1"></use>
                 </svg>
             </div>
                 <p class="doit-svg-title">
@@ -21,8 +21,8 @@
 
         <li class="doit-item list">
             <div class="doit-svg">
-                <svg class="doit-svg-item">
-                    <!-- <use href="./sprite.svg#icon-wedoit-1"></use> -->
+                <svg class="doit-svg-item" width=46px height=47px>
+                    <use href="../sprite.svg#icon-wedoit-2 "></use>
                 </svg>
             </div>
                 <p class="doit-svg-title">
@@ -35,8 +35,8 @@
 
         <li class="doit-item list">
             <div class="doit-svg">
-                <svg class="doit-svg-item">
-                    <!-- <use href="./sprite.svg#icon-wedoit-1"></use> -->
+                <svg class="doit-svg-item" width=68px height=48px>
+                    <use href="../sprite.svg#icon-wedoit-3"></use>
                 </svg>
             </div>
                 <p class="doit-svg-title">
@@ -49,8 +49,8 @@
 
         <li class="doit-item list">
             <div class="doit-svg">
-                <svg class="doit-svg-item">
-                    <!-- <use href="./sprite.svg#icon-wedoit-1"></use> -->
+                <svg class="doit-svg-item" width=0x height=48px>
+                    <use href="../sprite.svg#icon-wedoit-4"></use>
                 </svg>
             </div>
                 <p class="doit-svg-title">
@@ -63,8 +63,8 @@
 
         <li class="doit-item list">
             <div class="doit-svg">
-                <svg class="doit-svg-item"> 
-                    <!-- <use href="./sprite.svg#icon-wedoit-1"></use> -->
+                <svg class="doit-svg-item" width=40px height=48px> 
+                    <use href="../sprite.svg#icon-wedoit-5"></use>
                 </svg>
             </div>
                 <p class="doit-svg-title">
@@ -77,8 +77,8 @@
 
         <li class="doit-item list">
             <div class="doit-svg">
-                <svg class="doit-svg-item">
-                    <!-- <use href="./sprite.svg#icon-wedoit-1"></use> -->
+                <svg class="doit-svg-item"  width=57px height=48px>
+                    <use href="../sprite.svg#icon-wedoit-6"></use>
                 </svg>
             </div>
                 <p class="doit-svg-title">
