--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -1,54 +1,54 @@
-.container {
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-}
+// .container {
+//   width: 100%;
+//   padding-left: 20px;
+//   padding-right: 20px;
+// }
 
-.program {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background-color: #000000;
-}
+// .program {
+//   padding-top: 50px;
+//   padding-bottom: 50px;
+//   background-color: #000000;
+// }
 
-.program-title {
-  margin-bottom: 43px;
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 1.13;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-}
+// .program-title {
+//   margin-bottom: 43px;
+//   font-weight: 800;
+//   font-size: 20px;
+//   line-height: 1.13;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   color: #ffffff;
+// }
 
-.program-list > li {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 2;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
+// .program-list > li {
+//   font-weight: 700;
+//   font-size: 14px;
+//   line-height: 2;
+//   letter-spacing: 0.08em;
+//   text-transform: uppercase;
+//   color: #ffffff;
+// }
 
-.program-list > li:not(:last-child) {
-  margin-bottom: 40px;
-}
+// .program-list > li:not(:last-child) {
+//   margin-bottom: 40px;
+// }
 
-.program-term-list > li {
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 1.67;
-  // display: flex;
-  align-items: center;
-  letter-spacing: 0.08em;
-  color: var(--accent-color);
-  text-transform: none;
-}
+// .program-term-list > li {
+//   font-weight: 700;
+//   font-size: 12px;
+//   line-height: 1.67;
+//   // display: flex;
+//   align-items: center;
+//   letter-spacing: 0.08em;
+//   color: var(--accent-color);
+//   text-transform: none;
+// }
 
-.program-content-item {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.67;
-  letter-spacing: 0.08em;
-  color: var(--secondary-color);
-  opacity: 0.5;
-}
+// .program-content-item {
+//   font-weight: 500;
+//   font-size: 12px;
+//   line-height: 1.67;
+//   letter-spacing: 0.08em;
+//   color: var(--secondary-color);
+//   opacity: 0.5;
+// }
