--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,9 +1,13 @@
 <section class="problem"> 
-    <div class="container">
-    <h1 class="problem-title">Главные проблемы <br> учеников на English ВНО,  которые </br> мы <span class="problem-title-item">помогаем</span> решить</h1>
+    <div>
+        <h1 class="problem-title">Главные проблемы учеников 
+            <br>на English ВНО,  которые </br> 
+        мы 
+        <span class="problem-title-item">помогаем</span> 
+        решить</h1> 
+
     <div class="problem-list-container">
     <ul class="problem-list">
-        <!-- <li class="problem-item-number list">01</li> -->
         <li class="problem-item list">
             <p class="problem-item-number">01</p>
             Незнание грамматики
@@ -29,6 +33,7 @@
             Недостатой самоорганизации и лень
         </li>
     </ul>
+
     </div>
     </div>
 </section>
