--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,21 +1,25 @@
 .container{
     width: 100%;
-    padding: 0 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto;
 }
 @media screen and (min-width:320px){
     .container{
         max-width: 320px;
-        margin: 0 auto;
 }
 }
 @media screen and (min-width:768px){
     .container{
         max-width: 768px;
-        padding: 0 40px;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 }
 @media screen and (min-width:1316px){
     .container{
         max-width: 1316px;
+        padding-left: 183px;
+        padding-right: 183px;
     }
 }
