--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -1,29 +1,16 @@
-
 .container {
-    padding: 50px 20px;
-
-}
- 
-.list {list-style: none;}
-
-h1 {margin: 0;}
-
-ul, ol {
-    margin: 0;
-    padding: 0;
+    padding-top: 50px;
 }
 
 .problem {
-    margin-bottom: 175px;
+    margin-bottom: 148px;
     min-width: 320px;
     height: 545px;
+    padding-bottom: 205px;
     background-color: #111518;
-
 }
-
 .problem-title {
-    position: relative;
-    margin-bottom: 27px;
+    padding: 50px 20px 0;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
@@ -36,26 +23,19 @@ ul, ol {
     &-item {        
         color: #FF6B09;
     }
-
 }
 
 .problem-list-container {
-    position: absolute;
+    position: relative;
     padding: 20px 14px 20px 30px;
-    min-width: 280px;
-    left: 50%;
-    top: 97%;
-    transform: translate(-50%, -50%) scale(1); 
+    max-width: 280px;
+    top: 27px;
+    margin: 0 auto;
+
     background-color: #FFFFFF;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-
 }
 
-.problem-list {
-    display: flex;
-    flex-direction: column;
-
-}
 .problem-item-number {
     display: flex;
     margin-bottom: 5px;
@@ -75,14 +55,9 @@ ul, ol {
         margin-right: 4px;
         
     }
-    
-    
 }
 
 .problem-item {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 700;
@@ -93,44 +68,147 @@ ul, ol {
     
     color: #111518;  
     
-    &:not(:last-child) {
-        margin-bottom: 10px;
+}
+
+
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .problem-list {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .problem-item {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start; 
+        
+        &:not(:last-child) {
+            margin-bottom: 10px;
+        }
     }
 }
 
 @media screen and (min-width: 768px) {
+
     .container {
-        padding: 50px 40px;
-    
+        max-width: 768px;
+        padding: 60px 40px 0 40px;
     }
+
+    .problem {
+        margin-bottom: 152px;
+        min-width: 768px;
+        height: 340px;
+        padding-bottom: 189px;
+        background-color: #111518;
+    }
+    
+    .problem-title {
+        padding: 60px 40px 0;
+    }
+    
     .problem-list-container {
-        position: absolute;
-        padding: 20px 14px 20px 30px;
-        min-width: 688px;
-        left: 50%;
-        top: 97%;
-        transform: translate(-50%, -50%) scale(1); 
+        position: relative;
+        padding: 30px 96px;
+        max-width: 688px;
+        top: 25px;
+    
         background-color: #FFFFFF;
         box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-    
+        margin-bottom: 50px;
     }
-    // .problem-item {
-    //     display: flex;
-    //     flex-wrap: wrap;
-    //     align-items: flex-start;
-    //     font-family: Montserrat;
-    //     font-style: normal;
-    //     font-weight: 700;
-    //     font-size: 14px;
-    //     line-height: 1.714;
+
+
+    .problem-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: -22px;
+        margin-left: -22px;
+    }
+
+   .problem-list > .problem-item {
+       flex-basis: calc(100% / 2 - 22px);
+       margin-top: 22px;
+       margin-right: 22px;
+   }
+   .problem-item {
+       max-width: 286px;
+       height: 69px;
+   }
     
-    //     letter-spacing: 0.08em;
+}
+
+@media screen and (min-width:1316px){
+    .container {
+        max-width: 1316px;
+        padding: 100px 183px 0 183px;
+    }
+
+    .problem {
+        margin-bottom: 150px;
+        min-width: 1680px;
+        height: 560px;
+        padding-bottom: 348px;
+        background-color: #111518;
+    }
+
+    .problem-title {
+        padding: 100px 183px 0;
+        font-family: Montserrat;
+        font-weight: 800;
+        font-size: 46px;
+        line-height: 1.3;    
+        letter-spacing: 0.03em;
         
-    //     color: #111518;  
+        color: #FFFFFF;  
         
-    //     // &:not(:last-child) {
-    //     //     margin-bottom: 10px;
-    //     // }
-    // }
+        &-item {        
+            color: #FF6B09;
+        }
+    }
+    .problem-list-container {
+        position: relative;
+        padding: 70px 112px 62px 114px;
+        max-width: 1314px;
+        top: 70px;
+    
+        background-color: #FFFFFF;
+        box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+        margin-bottom: 130px;
+    }
+
+
+    .problem-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-top: -40px;
+        margin-left: -40px;
+    }
+
+   .problem-list > .problem-item {
+       flex-basis: calc(100% / 3 - 40px);
+       margin-top: 40px;
+       margin-right: 40px;
+   }
+
+   .problem-item {
+       max-width: 336px;
+       font-weight: 700;
+       font-size: 20px;
+       line-height: 1.4;
+       letter-spacing: 0.08em;
+   }
+
+   .problem-item-number {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.64;
+    letter-spacing: 0.08em;
+    align-items: center;
+   }
 
 }
