--- a/src/sass/components/_we_do_it.scss
+++ b/src/sass/components/_we_do_it.scss
@@ -1,25 +1,13 @@
 .container {
-    padding: 50px 20px;
-
+    margin-bottom: 50px;
 }
-
-.list {list-style: none;}
-
-h1 {margin: 0;}
-
-ul, ol {
-    margin: 0;
-    padding: 0;
-}
-
-
 .doit {
     display: flex;
 
 }
 
 .doit-title {
-    margin-bottom: 30px;
+    margin-bottom: 30px 10px 20px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
@@ -29,22 +17,25 @@ ul, ol {
     text-align: center;
     letter-spacing: 0.03em;
     
-    color: #111518;
-    
-    
+    color: #111518; 
 }
 
-// .doit-list {
-    
-
-// }
+.doit-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+}
 
 .doit-item {
     display: block;
     padding: 0 5px 20px;
     width: 280px;
     height: 280px;
+    padding: 30px;
     background: #FFFFFF;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
 
     &:not(:last-child) {
@@ -57,21 +48,21 @@ ul, ol {
     }
 
 }
-
-
-.doit-svg-item {
+.doit-svg {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
-    padding-top: 30px;
     margin-bottom: 20px;
-    color: #FF6B09;
+
+}
+
+.doit-svg-item {
+    fill: #FF6B09;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     .doit-item:hover &,
     .doit-item:focus & {
-        color: #FFFFFF;
+        fill: #FFFFFF;
     }
 }
 
@@ -88,6 +79,7 @@ ul, ol {
     letter-spacing: 0.08em;
     
     color: #111518;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     .doit-item:hover &,
     .doit-item:focus & {
@@ -113,6 +105,7 @@ ul, ol {
         letter-spacing: 0.08em;
         
         color: #FF6B09;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
         .doit-item:hover &,
         .doit-item:focus & {
@@ -135,6 +128,7 @@ ul, ol {
     letter-spacing: 0.08em;
     
     color: #B9B9B9;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     .doit-item:hover &,
     .doit-item:focus & {
@@ -144,17 +138,33 @@ ul, ol {
 }
 
 @media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+        padding: 60px 40px 0 40px;
+    }
+
+    .doit-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-top: -20px;
+        margin-left: -20px;
+        margin-bottom: 27px;
+    }
+
     .doit-item {
         display: block;
         padding: 40px 15px 0;
         width: 334px;
         height: 334px;
         background: #FFFFFF;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
         box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
-        // calc ()
     
         &:not(:last-child) {
-            margin-bottom: 15px;
+            margin-bottom: 0;
         }
     
         &:hover, 
@@ -162,5 +172,79 @@ ul, ol {
             background: #FF6B09;
         }
     
+    }
+    .doit-list > .doit-item {
+        flex-basis: calc(100% / 2 - 20px);
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+}
+
+
+
+@media screen and (min-width: 1316px) {
+    .container {
+        max-width: 1316px;
+        padding: 100px 100px 0 100px;
+        margin-bottom: 130px;
+    }
+    .doit-title {
+        margin-bottom: 50px;
+        text-align: start;
+        font-weight: 800;
+        font-size: 46px;
+        line-height: 1.3;
+        letter-spacing: 0.03em;
+    }
+    .doit-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-top: -10px;
+        margin-left: -10px;
+        margin-bottom: 20px;
+    }
+
+    .doit-item {
+        display: block;
+        padding: 40px 30px 55px;
+        min-width: 424px;
+        min-height: 396px;
+        background: #FFFFFF;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+    
+        &:not(:last-child) {
+            margin-bottom: 0;
+        }
+    
+        &:hover, 
+        &:focus {
+            background: #FF6B09;
+        }
+    
+    }
+    .doit-list > .doit-item {
+        flex-basis: calc(100% / 3 - 10px);
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+    .doit-svg-title {
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.4;
+        
+        text-align: center;
+        letter-spacing: 0.08em;
+    }
+    .doit-svg-explain {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 1.56;
+
+        text-align: center;
+        letter-spacing: 0.08em;
     }
 }
