--- a/src/partials/programm.html
+++ b/src/partials/programm.html
@@ -1,7 +1,7 @@
 
 <section class="program-section">
     <div class="container">
-        
+        <div class="program-line"></div>
 
             <h2 class="program-title" >
                 Наша программа
@@ -120,19 +120,19 @@
                         srcset="./images/programm-desk.jpg 1x, ./images/programm-desk@2x.jpg 2x"
                         media="(min-width: 1200px)" type="image/webp">
                     <source
-                        srcset="./images/programm-desk.jpg 1x, ./images/programm-desk@2x.jpg 2x"
+                        srcset="./images/programm-desk.png 1x, ./images/programm-desk@2x.png 2x"
                         media="(min-width: 1200px)">
                     <source
                         srcset="./images/programm-tablet.jpg 1x, ./images/programm-tablet@2x.jpg 2x"
                         media="(min-width: 768px)" type="image/webp">
                     <source
-                        srcset="./images/programm-tablet.jpg 1x, ./images/programm-tablet@2x.jpg 2x"
+                        srcset="./images/programm-tablet.png 1x, ./images/programm-tablet@2x.png 2x"
                         media="(min-width: 768px)">
                     <source
                         srcset="./images/programm-mobile.jpg 1x, ./images/programm-mobile@2x.jpg 2x"
                         media="(min-width: 320px)" type="image/webp">
                     <source
-                        srcset="./images/programm-mobile.jpg 1x, ./images/programm-mobile@2x.jpg 2x"
+                        srcset="./images/programm-mobile.png 1x, ./images/programm-mobile@2x.png 2x"
                         media="(min-width: 320px)">
                     <img class="program-list-img" src="./images/programm-mobile.jpg"
                         alt="предподаватель проводит занятие" />
