Исправила scss Desktop

--- a/src/sass/_programm.scss
+++ b/src/sass/_programm.scss
@@ -105,16 +105,14 @@
     color: var(--txt-dark);
 }
 .program-dignity-items{
-    background: #FFFFFF;
+    background: var(--b-white);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
     position: absolute;
     min-width: 280px;
     justify-content: center;
     padding: 20px 30px;
 }
-.program-dignity-item:not(:last-child) {
-    margin-bottom: 20px;
-}
+
 .program-dignity {
     position: relative;
 }
@@ -144,7 +142,7 @@
         margin-right: 20px;
         padding: 6px;
         border: 1px solid #FF6B09;
-        background: #FF6B09;
+        background: var(--b-accent-background);
         border-radius: 50%;
     }
     .program-items:not(:last-child)::before{
@@ -154,11 +152,14 @@
         left: 32%;
         width: 1px;
         height: 64%;
-        background:  #ffffff;
+        background:  var(--b-white);
     
     }
     .program-item {
         padding-left: 80px;
+    }
+    .program-dignity-item:not(:last-child) {
+        margin-bottom: 20px;
     }
 }
 
@@ -198,7 +199,7 @@
         position: relative;
         padding: 6px;
         border: 1px solid #FF6B09;
-        background: #FF6B09;
+        background: var(--b-accent-background);
         border-radius: 50%; 
         margin-right: 38px;
     }
@@ -206,7 +207,7 @@
         content: '';
         position: absolute;
         width: 1px;
-        background:  #ffffff;
+        background:  var(--b-white);
         top: 100px;
         left: 15%;
         height: 55%;
@@ -260,9 +261,6 @@
         display: inline-block;
         max-width: 236px;
     }
-    .program-dignity-item:not(:last-child) {
-        margin-bottom: 0px;
-    }
     .program-dignity-item:nth-child(-n + 4)  {
         margin-bottom: 30px;
     }
@@ -297,7 +295,7 @@
     .program-items {
         display: flex;
         justify-content: space-between;
-        
+        margin-bottom: 164px;
         // flex-direction: column;
     }
     .program-item {
@@ -308,12 +306,13 @@
     .program-item-title {
     
         @include font (700, 20px, 1.4, 0.08em);
-        
+        margin-bottom: 25px;
         
         
     }
     .program-item-subtitle {
         @include font (700, 20px, 1.649, 0.08em);
+        padding-left: 18px;
     }
     .program-topics-item {
         @include font (500, 18px, 1.556, 0.08em);
@@ -335,17 +334,18 @@
     .program-list-img {
         display: inline-block;
         position: absolute;
-        top: 66%;
-        left: 0;
+        top: 51%;
+        left: -140px;
         opacity: 0.5;
     }
     .program-line {
         display: inline-block;
         position: absolute;
         width: 100%;
-        border: 1px solid #FF6B09;
-        top: 25%;
+        border: 1px solid #FFFFFF;
+        top: 13%;
         left: 0;
+        
 
     }
     .program-item-title::before {
@@ -355,9 +355,46 @@
         margin-right: 0px;
         padding: 6px;
         border: 1px solid #FF6B09;
-        background: #FF6B09;
-        top: 25%;
+        background: var(--b-accent-background);
+        top: 12.5%;
         border-radius: 50%;
+        z-index: 1;
     }
-    
+    .program-item-grammar,
+    .program-item-vocabulary{
+        margin-bottom: 25px;
+        
+    }
+    .program-subtitle {
+       display: none;
+    }
+    .program-section .container {
+        padding-bottom: 180px;
+    }
+    .program-dignity-items{
+        position: absolute;
+        
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 70px 84px;
+    }
+    .program-dignity-item {
+        display: inline-block;
+        max-width: 356px;
+        
+    }
+    .program-dignity-number {
+    @include font (700, 20px, 1.649, 0.08em);
+    margin-left: 20px;
+    margin-bottom: 10px;
+    }
+    .program-dignity-text {
+        @include font (700, 20px, 1.2, 0.08em);
+        
+    }
+    .program-dignity-item:nth-child(-n + 3)  {
+        margin-bottom: 32px;
+    }
+
 }
