--- a/src/sass/layout/_registration-form.scss
+++ b/src/sass/layout/_registration-form.scss
@@ -156,12 +156,23 @@
   font-size: 12px;
   line-height: 1.25;
   display: flex;
+  border: 2px solid $orange;
   align-items: center;
   text-align: center;
   letter-spacing: 0.08em;
   text-transform: uppercase;
   margin: 0 auto;
   margin-top: 50px;
+  transform: scale(1);
+  transition: all 450ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: $white;
+    color: $orange;
+    transform: scale(1.2);
+    transition: all 450ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
   @media screen and (min-width: 768px) {
     margin-top: 11px;
