--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,13 +1,29 @@
 <footer class="footer">
     <div class="container">
 
-        <div class="footer__contacts">
-            <a href="./index.html" class="footer__logo">
-                <svg width="84.12" height="30">
-                    <use href="./icons/footer-sprite.svg#icon-footer-logo"></use>
+        <ul class="footer__list">
+            <li class="footer__list-item">
+                <a href="./index.html" class="footer__logo">
+                    <svg class="footer__logo-svg">
+                        <use href="./icons/footer-sprite.svg#footer-logo"></use>
+                </a>
+            </li>
+            <li class="footer__list-item">
+                <svg class="footer__phone">
+                    <use href="./icons/footer-sprite.svg#footer-phone"></use>
                 </svg>
-            </a>
-        </div>
+                <p class="footer__phone-number">+38 (000) 000 00 00</p>
+            </li>
+            <li class="footer__list-item">
+                <svg class="footer__line">
+                    <use href="./icons/footer-sprite.svg#footer-line"></use>
+                </svg>
+            </li>
+            <li class="footer__list-item">
+               
+            </li>
+
+        </ul>
         
     </div> 
 </footer>
