Добавляет картинки фона

--- a/src/partials/our-program.html
+++ b/src/partials/our-program.html
@@ -6,14 +6,14 @@
                 1 семестр
                 <ul class="our-program-semester-list list">
                     <li class="our-program-semester-item">
-                        — Grammar
+                        Grammar
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Nouns & Articles</li>
                             <li class="our-program-topic-item">Adjectives & Adverb</li>
                         </ul>
                     </li>
                     <li class="our-program-semester-item vocabulary">
-                        — Vocabulary
+                        Vocabulary
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Family & Relations</li>
                             <li class="our-program-topic-item">People & Society</li>
@@ -25,7 +25,7 @@
                 2 семестр
                 <ul class="our-program-semester-list list">
                     <li class="our-program-semester-item  grammar">
-                        — Grammar
+                        Grammar
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Pronouns</li>
                             <li class="our-program-topic-item">Active Voice</li>
@@ -33,7 +33,7 @@
                         </ul>
                     </li>
                     <li class="our-program-semester-item vocabulary">
-                        — Vocabulary
+                        Vocabulary
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Home</li>
                             <li class="our-program-topic-item">School</li>
@@ -46,7 +46,7 @@
                 3 семестр
                 <ul class="our-program-semester-list list">
                     <li class="our-program-semester-item grammar">
-                        — Grammar
+                        Grammar
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Modal verbs</li>
                             <li class="our-program-topic-item">Infinitive</li>
@@ -55,7 +55,7 @@
                         </ul>
                     </li>
                     <li class="our-program-semester-item vocabulary">
-                        — Vocabulary
+                        Vocabulary
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Travel & Tourism</li>
                             <li class="our-program-topic-item">Culture & Free Time</li>
@@ -63,7 +63,7 @@
                         </ul>
                     </li>
                     <li class="our-program-semester-item writing">
-                        — Writing
+                        Writing
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Informal Letter </li>
                         </ul>
@@ -74,7 +74,7 @@
                 4 семестр
                 <ul class="our-program-semester-list list">
                     <li class="our-program-semester-item grammar">
-                        — Grammar
+                        Grammar
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Clauses: Conditional and Wishes</li>
                             <li class="our-program-topic-item">Direct / Reported speech</li>
@@ -84,7 +84,7 @@
                         </ul>
                     </li>
                     <li class="our-program-semester-item vocabulary">
-                        — Vocabulary
+                        Vocabulary
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Healthy Living</li>
                             <li class="our-program-topic-item">Nature & Environment</li>
@@ -92,7 +92,7 @@
                         </ul>
                     </li>
                     <li class="our-program-semester-item writing">
-                        — Writing
+                        Writing
                         <ul class="our-program-topic-list list">
                             <li class="our-program-topic-item">Formal Letter</li>
                         </ul>
@@ -103,7 +103,6 @@
                     5 семестр
                     <ul class="our-program-semester-list list">
                         <li class="our-program-semester-item grammar">
-                            —
                             <ul class="our-program-topic-list list">
                                 <li class="our-program-topic-item">Revision</li>
                                 <li class="our-program-topic-item">Tests</li>
