--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -66,6 +66,7 @@
 }
 
 .our-program-semester-item{
+    position: relative;
     font-weight: 700;
     font-size: 12px;
     line-height: 1.667;
@@ -76,6 +77,14 @@
 
     &:not(:last-child){
         margin-bottom: 11px;
+    }
+
+    &::before{
+        position: absolute;
+        content: "";
+        width: 13px;
+        height: 1px;
+        background-color: var(--orange-color);
     }
 
 }
@@ -137,18 +146,17 @@
         margin-top: 11px;
     }
 
-
     .our-program-semester-item{
 
-        .grammar{
+        & .grammar{
             min-width: 176px;
         }
 
-        .vocabulary{
+        & .vocabulary{
             min-width: 155px;
         }
 
-        .writing{
+        & .writing{
             min-width: 110px;
         }
 
