--- a/src/sass/components/_section.scss
+++ b/src/sass/components/_section.scss
@@ -1,18 +1,18 @@
 .title {
-  font-family: Titan One;
+  font-family: 'Titan One', cursive;
   font-weight: 400px;
   font-size: 34px;
   line-height: 1.147;
   text-align: center;
   text-transform: uppercase;
-  color: var(--title-text-color);
+  color: $titleTextColor;
 }
 .subtitle {
-  font-family: Titan One;
+  font-family: 'Titan One', cursive;
   font-weight: 400px;
   font-size: 18px;
   line-height: 1.166;
   text-align: center;
   text-transform: uppercase;
-  color: var(--subtitle-text-color);
+  color: $subtitleTextColor;
 }
