--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -22,20 +22,17 @@
 <footer>
     <div class="footer-white">
         <div class="container">
-            <img class="logo logo-footer" src="./images/logo-black-mobile.svg"
-                alt="логотип сайта HellEn адский английский">
+            <img class="logo logo-footer" src="./images/logo-black-mobile.svg" />
             <div class=" phone-groupe">
                 <a href="#" class="footer-callme">
                     <svg class="phone">
                         <use href="./images/sprite.svg#icon-footer-tel" width="20" height="20"></use>
                     </svg>
-
                     <span class="phone-number">+38 (000) 000 00 00</span>
                 </a>
                 <span class="footer-line"></span>
-                <img src="./images/instagram.jpg" alt="instagram" width="40" height="40">
+                <img src="./images/instagram.jpg" alt="instagram" srcset="./images/instagram@2x.jpg 2x">
             </div>
-
         </div>
     </div>
     <div class="footer-black">
