--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -184,5 +184,89 @@
     align-items: center;
   }
 }
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
+  .request {
+    &-form {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      background-image: url(../images/footer-mobile@2x.png);
+    }
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1199px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
+  .request {
+    &-form {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      background-image: url(../images/footer-tablet@2x.png);
+    }
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+  screen and (min-resolution: 192dpi) and (min-width: 1200px),
+  screen and (min-resolution: 2dppx) and (min-width: 1200) {
+  .request {
+    &-form {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      background-image: url(../images/footer-desk@2x.png);
+    }
+  }
+}
+
 @media screen and (min-width: 1200px) {
+  .request {
+    &-form {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      background-image: url(../images/footer-desk.png);
+      background-repeat: no-repeat;
+      background-size: 768px 552px;
+      background-position: center;
+      padding: 50px 40px 70px 40px;
+      width: 768px;
+      min-height: 520px;
+      &-input {
+        width: 390px;
+        &:nth-child(2) {
+          margin-bottom: 30px;
+        }
+      }
+    }
+    &-invite {
+      @include font(600, 14px, 1.214, 0.08em);
+      margin-bottom: 40px;
+    }
+    &-title {
+      @include font(800, 26px, 1.3, 0.03em);
+    }
+  }
+  .footer {
+    &-line {
+      display: block;
+      border-bottom: 1px solid var(--txt-grey);
+      transform: rotate(90deg);
+      width: 48px;
+      top: 60px;
+      left: -28px;
+    }
+    &-white {
+      height: 125px;
+      & .container {
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+    &-black .container {
+      justify-content: flex-start;
+    }
+    &-callme {
+      margin-bottom: 0;
+    }
+  }
+  .phone-groupe {
+    flex-direction: row;
+    align-items: center;
+  }
 }
