--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1836,4 +1836,99 @@ a {
         -ms-flex-align: center;
             align-items: center;
   }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px) and (max-width: 767px), screen and (min-resolution: 192dpi) and (min-width: 320px) and (max-width: 767px), screen and (min-resolution: 2dppx) and (min-width: 320px) and (max-width: 767px) {
+  .request-form {
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-image: url(../images/footer-mobile@2x.png);
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1199px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1199px), screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px), screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
+  .request-form {
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-image: url(../images/footer-tablet@2x.png);
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200), screen and (min-resolution: 2dppx) and (min-width: 1200) {
+  .request-form {
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-image: url(../images/footer-desk@2x.png);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .request-form {
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-image: url(../images/footer-desk.png);
+    background-repeat: no-repeat;
+    background-size: 768px 552px;
+    background-position: center;
+    padding: 50px 40px 70px 40px;
+    width: 768px;
+    min-height: 520px;
+  }
+  .request-form-input {
+    width: 390px;
+  }
+  .request-form-input:nth-child(2) {
+    margin-bottom: 30px;
+  }
+  .request-invite {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.08em;
+    margin-bottom: 40px;
+  }
+  .request-title {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+  }
+
+  .footer-line {
+    display: block;
+    border-bottom: 1px solid var(--txt-grey);
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    width: 48px;
+    top: 60px;
+    left: -28px;
+  }
+  .footer-white {
+    height: 125px;
+  }
+  .footer-white .container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer-black .container {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .footer-callme {
+    margin-bottom: 0;
+  }
+
+  .phone-groupe {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }/*# sourceMappingURL=main.css.map */
